--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "probjectanib",
+  "name": "anubhavportfolio",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
@@ -8,29 +8,19 @@
   },
   "keywords": [],
   "type": "module",
-  "author": "",
+  "author": "anubhavsingh",
   "license": "ISC",
-  "description": "",
+  "description": "this is my portfolio backend",
   "dependencies": {
-    "bcrypt": "^6.0.0",
-    "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
-    "connect-mongodb-session": "^5.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "express-session": "^1.18.2",
-    "express-validator": "^7.2.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.19.0",
-    "mongoose": "^8.18.0",
-    "nodemon": "^3.1.10"
+    "mongoose": "^8.18.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17"
+    "nodemon": "^3.1.10"
   }
 }
 
